healthd: use /charger symlink to launch healthd
Makes this consistent with other targets and maken sure
any changes in healthd will be transparent to targets as long
as the symlink is maintained.

Test: Tested charge-only mode

Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -351,7 +351,7 @@ service qseecomd /system/bin/qseecomd
     user root
     group root
 
-service charger /sbin/healthd -c
+service charger /charger
     class charger
     critical
 
