--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -354,6 +354,7 @@ service qseecomd /system/bin/qseecomd
 service charger /charger
     class charger
     critical
+    seclabel u:r:healthd:s0
 
 service hvdcp /system/bin/hvdcp
     class core
@@ -369,6 +370,7 @@ on property:persist.usb.hvdcp.detect=false
 service qbcharger /charger -m 1
     disabled
     oneshot
+    seclabel u:r:healthd:s0
 
 on property:sys.qbcharger.enable=true
     start qbcharger
@@ -414,6 +416,7 @@ service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     class late_start
     user bluetooth
     group bluetooth net_bt_admin diag radio
+    seclabel u:r:bluetooth_loader:s0
     disabled
     oneshot
 
