--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -307,7 +307,7 @@ service qmuxd /system/bin/qmuxd
 service netmgrd /system/bin/netmgrd
     class main
     user root
-    group radio system wakelock
+    group radio wifi system wakelock
 
 # QCOM sensor
 service sensors /system/bin/sensors.qcom
