--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -354,7 +354,7 @@ service qseecomd /system/bin/qseecomd
 service charger /charger
     class charger
     critical
-    seclabel u:r:healthd:s0
+    seclabel u:r:charger:s0
 
 service hvdcp /system/bin/hvdcp
     class core
