--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -416,7 +416,7 @@ service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     class late_start
     user bluetooth
     group bluetooth net_bt_admin diag radio
-    seclabel u:r:bluetooth_loader:s0
+    seclabel u:r:hci_attach:s0
     disabled
     oneshot
 
