--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -35,6 +35,18 @@ on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
     write /sys/kernel/boot_adsp/boot 1
+    mount debugfs debugfs /sys/kernel/debug
+    chmod 755 /sys/kernel/debug
+    chmod 755 /sys/kernel/debug/sync
+    chown graphics graphics /sys/kernel/debug/sync/sw_sync
+    chmod 777 /sys/kernel/debug/sync/sw_sync
+    chown graphics graphics /sys/kernel/debug/sync/info
+
+    setprop ro.hardware.gralloc gbm
+    setprop ro.hardware.hwcomposer drm
+    setprop debug.sf.no_hw_vsync 1
+    setprop hwc.drm.use_framebuffer_target 1
+    setprop hwc.drm.use_overlay_planes 0
 
 on fs
     mount_all ./fstab.bacon
