--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -39,7 +39,9 @@ on early-boot
     chmod 755 /sys/kernel/debug
     chmod 755 /sys/kernel/debug/sync
     chown graphics graphics /sys/kernel/debug/sync/sw_sync
+    symlink /sys/kernel/debug/sync/sw_sync /dev/sw_sync
     chmod 777 /sys/kernel/debug/sync/sw_sync
+    chmod 777 /dev/sw_sync
     chown graphics graphics /sys/kernel/debug/sync/info
 
     setprop ro.hardware.gralloc gbm
