wip: cleanup old stuff
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -22,8 +22,6 @@ on early-init
     write /sys/block/zram0/comp_algorithm lz4
 
 on init
-    export LD_PRELOAD /system/lib/libboringssl-compat.so
-
     # Set permissions for persist partition
     mkdir /persist 0771 system system
     mkdir /firmware 0771 system system
@@ -43,6 +41,8 @@ on early-boot
     chmod 777 /sys/kernel/debug/sync/sw_sync
     chmod 777 /dev/sw_sync
     chown graphics graphics /sys/kernel/debug/sync/info
+    chown graphics graphics /dev/dri/card0
+    chown graphics graphics /dev/dri/renderD128
 
     setprop ro.hardware.gralloc gbm
     setprop ro.hardware.hwcomposer drm
@@ -301,184 +301,3 @@ on post-fs-data
     # Torch
     chown system camera /sys/class/leds/torch-light/brightness
     chmod 0660 /sys/class/leds/torch-light/brightness
-
-service rmt_storage /system/vendor/bin/rmt_storage
-    class core
-    user root
-    group system
-
-service rfs_access /system/vendor/bin/rfs_access
-    class core
-    user system
-    group system net_raw
-
-# QMUX must be in multiple groups to support external process connections
-service qmuxd /system/vendor/bin/qmuxd
-    class main
-    user radio
-    group radio audio bluetooth wakelock gps diag oem_2950
-
-service netmgrd /system/vendor/bin/netmgrd
-    class main
-    user root
-    group radio wifi system wakelock
-
-# QCOM sensor
-service sensors /system/vendor/bin/sensors.qcom
-    class late_start
-    user root
-    group root
-
-# Adjust socket buffer to enlarge TCP receive window for high bandwidth
-# but only if ro.data.large_tcp_window_size property is set.
-on property:ro.data.large_tcp_window_size=true
-    write /proc/sys/net/ipv4/tcp_adv_win_scale  2
-
-on property:persist.env.fastdorm.enabled=true
-    setprop persist.radio.data_no_toggle 1
-
-service irsc_util /system/vendor/bin/irsc_util "/etc/sec_config"
-    class main
-    user root
-    oneshot
-
-service wpa_supplicant /system/vendor/bin/hw/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
-    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
-    class main
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
-
-service loc_launcher /system/vendor/bin/loc_launcher
-    #loc_launcher will start as root and set its uid to gps
-    class late_start
-    group gps qcom_oncrpc inet net_raw diag oem_2950 net_admin wifi
-
-service qseecomd /system/vendor/bin/qseecomd
-    class core
-    user root
-    group root
-
-service charger /charger
-    class charger
-    critical
-    seclabel u:r:charger:s0
-
-service hvdcp /system/bin/hvdcp
-    class core
-    user root
-    disabled
-
-on property:persist.usb.hvdcp.detect=true
-    start hvdcp
-
-on property:persist.usb.hvdcp.detect=false
-    stop hvdcp
-
-service qbcharger /charger -m 1
-    disabled
-    oneshot
-    seclabel u:r:healthd:s0
-
-on property:sys.qbcharger.enable=true
-    start qbcharger
-
-on property:sys.qbcharger.enable=false
-    stop qbcharger
-
-service qcamerasvr /system/vendor/bin/mm-qcamera-daemon
-    class late_start
-    user camera
-    group camera system inet input graphics
-
-service mpdecision /system/vendor/bin/mpdecision --avg_comp
-   class main
-   user root
-   group root readproc
-   disabled
-
-service time_daemon /system/vendor/bin/time_daemon
-    class late_start
-    user root
-    group root
-
-on property:vold.decrypt=trigger_restart_framework
-    start config_bt_addr
-    start wcnss-service
-
-service config_bt_addr /system/vendor/bin/btnvtool -O
-    class core
-    user bluetooth
-    group bluetooth radio
-    oneshot
-
-service hci_attach /system/vendor/bin/sh /system/etc/init.qcom.bt.sh
-    class late_start
-    user bluetooth
-    group bluetooth net_bt_admin oem_2950 diag radio
-    seclabel u:r:hci_attach:s0
-    disabled
-    oneshot
-
-on property:bluetooth.hciattach=true
-    start hci_attach
-
-on property:bluetooth.hciattach=false
-    setprop bluetooth.status off
-
-service adsprpcd /system/vendor/bin/adsprpcd
-   class main
-   user media
-   group media
-
-service audiod /system/vendor/bin/audiod
-   class late_start
-   user system
-   group system
-
-service wcnss-service /system/bin/wcnss_service
-    class main
-    user system
-    group system wifi oem_2950 diag radio
-    oneshot
-
-on property:init.svc.surfaceflinger=stopped
-    stop ppd
-
-on property:init.svc.surfaceflinger=running
-    start ppd
-
-# diag logging
-service diag_mdlog_start /system/bin/diag_mdlog
-    class late_start
-    user shell
-    group system oem_2950 diag sdcard_rw sdcard_r media_rw
-    disabled
-    oneshot
-
-service diag_mdlog_stop /system/bin/diag_mdlog -k
-    class late_start
-    user shell
-    group system oem_2950 diag sdcard_rw sdcard_r media_rw
-    disabled
-    oneshot
-
-service qlogd /system/xbin/qlogd
-    class main
-    disabled
-on property:persist.sys.qlogd=1
-    start qlogd
-on property:persist.sys.qlogd=0
-    stop qlogd
-
-service ssr_diag /system/bin/ssr_diag
-    class late_start
-    disabled
-    user system
-    group system
